--- a/brunocasino2.html
+++ b/brunocasino2.html
@@ -422,8 +422,8 @@
         notification.classList.remove("visible");
     };
 
-    // if(!${tag}){
-    //     memo.classList.add('hidden');
-    // };
+    if(!${tag}){
+        memo.classList.add('hidden');
+    };
   </script>
 </html>
